name:           form-police-testsuite
version:        0.0.1
build-type:     Simple
cabal-version:  >= 1.6

Flag portable
  Description: testsuite for form-police
               
  Default: False

Executable testsuite
  hs-source-dirs:  ../src suite
  main-is:         TestSuite.hs

  build-depends:
    base >= 4 && < 5,
    containers,
    bytestring,
    mtl >= 2 && <3,
    attoparsec >= 0.8.4.0,
    blaze-builder >= 0.2.1.4,
    aeson <= 0.4.4,
    regex-posix >= 0.94.4 && <0.95,
    time,
    text >= 0.11 && <0.12,
    HUnit >= 1.2 && < 2,
    QuickCheck >= 2.3.0.2,
    test-framework >= 0.3.1 && <0.4,
    test-framework-hunit >= 0.2.5 && < 0.3,
    test-framework-quickcheck2 >= 0.2.6 && < 0.3
  
  extensions: OverloadedStrings, GeneralizedNewtypeDeriving, NoMonomorphismRestriction
    
  ghc-options: -O2 -Wall -fhpc -fwarn-tabs -funbox-strict-fields -threaded
               -fno-warn-unused-do-bind

